--- a/src/components/DoctorFind.css
+++ b/src/components/DoctorFind.css
@@ -59,22 +59,69 @@
    curse:point;
 }
 
+.img_item img {
+    width:70px;
+    border-radius:50%;
+    position:relative;
+    top:25px;
+}
+
 .item_grid{
     display:grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows:repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows:repeat(2, 1fr);
 }
 
 .body_item {
     text-aligh:left !important;
-    border:1px solid lightgray;
+    border:0px solid lightgray;
     padding: 20px;
-    width:500px;
-    margin:20px auto;
+    border-radius:12px;
+    background: #FFFFFF;
+    box-shadow: 0px 38px 72px -30px rgba(0, 0, 0, 0.1);
+    margin:20px 50px;
+    display:flex;
+    gap: 20px;
+}
+
+.body_item .text_item {
+    text-align:left;
+    width:100%;
+    
+}
+
+.para_item {
+    display:flex;
+    justify-content:space-between;
+}
+
+.para {
+   display:flex; 
+   justify-content:space-between;
+
+}
+
+.info_text::before {
+    content: '';
+    display : block;
+    width:100%;
+    height:1px;
+    background-color:#d4d2d2;
+}
+
+.para_item button{
+    height:30px;
+    padding:0px 20px;
+    align-self:center;
+    color:white;
+    background-color:#0082E6;
+    border-radius:30px;
+    border:1px solid #0082E6;
+    cursor:pointer;
 }
 
 .body1{
-    margin:0;
+    margin:120px;
 }
 
  .notFound {   
