--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.App {
+  text-align: center;
+}
+body{
+  background:#EDEDED;
+}
+
+img {
+  height: 80px;
+  margin-right: 20px;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
