--- a/src/components/DoctorFind.css
+++ b/src/components/DoctorFind.css
@@ -1,5 +1,5 @@
 .title {
-    background: #0082E6;
+    background: #f55c0a;
     display:flex;
     justify-content:space-between;
     color: #ffffff;
@@ -43,24 +43,24 @@
 }
 
 .input_wrapper button {
-    background-color: #0082E6;
+    background-color: #f55c0a;
     
 }
 
 .input_wrapper button {
-   background-color: #0082E6;
+   background-color: #f55c0a;
    color: white;
    padding:8px 15px;
    font-size:15px;
    border: none;
-   border:3px solid #0082E6;
+   border:3px solid #f55c0a;
    border-radius:5px;
    margin-left:10px;
    curse:point;
 }
 
 .img_item img {
-    width:70px;
+    width:80px;
     border-radius:50%;
     position:relative;
     top:25px;
@@ -114,14 +114,14 @@
     padding:0px 20px;
     align-self:center;
     color:white;
-    background-color:#0082E6;
+    background-color:#f55c0a;
     border-radius:30px;
-    border:1px solid #0082E6;
+    border:1px solid #f55c0a;
     cursor:pointer;
 }
 
 .body1{
-    margin:120px;
+    margin:40px 120px;
 }
 
  .notFound {   
@@ -131,3 +131,135 @@
     border:1px solid lightgray;
     text-aligh:center;
 }
+
+
+.card_Doctor{
+    position: relative;
+    margin: 0 auto;
+    top:80px;
+    height: 780px;
+    width:400px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+    box-shadow: 0px 9px 40px -7px rgba(0, 0, 0, 0.25);
+    
+}
+
+.card_Doctor img{
+    height: 350px;
+    width: 380px;
+    text-align: center;
+    position:absolute;
+    left:10px;
+    top:10px;
+    border-radius: 30px;
+}
+
+.card_Doctor .card_content{
+    height: 350px;
+    width: 380px;
+    text-align: center;
+    position:absolute;
+    background-color: rgb(255, 255, 255);
+    left:10px;
+    top:300px;
+    border-radius: 30px;
+}
+
+.card_Doctor .card_footer{
+    height: 80px;
+    width: 380px;
+    text-align: center;
+    position:absolute;
+    background-color: #0082E6;
+    bottom: 10px;
+    left:10px;
+    border-radius: 0px 0px 30px 30px;
+}
+
+.card_Doctor h1{
+ color: #fff;
+ font-weight: 200;
+ text-transform: uppercase;
+ font-size: 25px;
+margin-top:25px;
+}
+
+.doctor_names h6{
+    text-align: start;
+    margin: 15px;
+    font-size: 12px;
+    color: rgb(0, 248, 54);
+    
+}
+.doctor_names h2{
+    text-align: start;
+    margin: 0px 15px;
+    font-size: 25px;
+}
+
+.doctor_names h3{
+    text-align: start;
+    margin: 5px 15px;
+    font-weight: 400;
+    font-size: 15px;
+    color: rgb(170, 169, 169);
+}
+
+.doctor_names::after {
+    content: '';
+    display: block;
+    margin-top: 20px;
+    height: 0.2px;
+    width: 100%;
+    background-color:rgb(170, 169, 169);
+}
+    .good h4{
+        display: flex;
+        justify-content: space-between;
+        margin: 15px 15px 15px 15px;
+    }
+
+    .good .number{
+        position: relative;
+        top:26px;
+    }
+
+    .good .line::after{
+        content: '';
+        display: block;
+        border-radius: 10%;
+        border-bottom: 5px solid #EC1C24;
+        border-image:   linear-gradient(to right, #0082E6 25%, #0082E6 50%,#0082E6 50%, #0082E6 75%, #CECECE 75%) 5;
+        margin-bottom: -2px;
+        margin-left:15px;
+        max-width: 300px;
+    }
+
+    .about {
+        margin-top: 20px;;
+    }
+
+    
+    .about h2{
+       text-align: start;
+       margin: 15px;
+       color:rgb(78, 78, 78);
+    }
+
+    .about p{
+        text-align: start;
+        margin: 15px;
+        color:rgb(170, 169, 169);
+     }
+
+     .arrow {
+      position: absolute;
+      left:30px;
+      top: -18px;
+      z-index: 1;
+      color:#fff;
+      font-size: 30px;
+     }
+
+     
